some additions here and there

--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -1,13 +1,70 @@
 ---
 title: Hello World
-description: My first blog so I decided to do a Hello World tutorial in Go, Java and Typescript. Maybe some other languages too why not lol
-pubDate: 2023-03-16
-updatedDate: 2023-03-17
+description: My first blog, so why not make Hello World examples in all the languages that I have used to some capacity. C, C++, Java, Python, Typescript, Go, Rust and Bash
+pubDate: 2023-03-15
+updatedDate: 2023-03-16
 image: 
   src: "hello-world.jpg"
-  alt: "me lol"
+  alt: "hello world"
 ---
 
+# C
+```c
+#include <stdio.h>
+
+int main() {
+   printf("Hello, world!");
+   return 0;
+}
+```
+
+# C++
+```cpp
+#include <iostream>
+
+int main() {
+    std::cout << "Hello, world!";
+    return 0;
+}
+```
+
+# Java
+```java
+public class main {
+  	public static void main(String[] args) {
+      	System.out.println("Hello, world!");
+    }
+}
+```
+# Python
+```python
+print("Hello, world!")
+```
+
+# Typescript
+```ts
+cosnole.log("Hello, world!");
+```
+
+# Go
 ```go
-hello world
+package main
+
+import "fmt"
+
+func main() {
+    println("Hello, world!");
+  }
+```
+
+# Rust
+```rs
+fn main() {
+	println!("Hello, World!");
+}
+```
+
+# Bash
+```bash
+echo "Hello, world!"
 ```
