--- a/src/content/blog/arch-btw.mdx
+++ b/src/content/blog/arch-btw.mdx
@@ -3,6 +3,7 @@ title: I use Arch btw
 description: Will briefly talk about my Arch Linux setup for dev and general use, highlighting the several tools and packages that go into bringing all of it together
 pubDate: 2023-03-16
 updatedDate: 2023-03-17
+tags: [Linux, Arch, Neovim]
 image: 
   src: "arch-btw.jpg"
   alt: "arch btw"
