--- a/src/content/blog/hello-world.mdx
+++ b/src/content/blog/hello-world.mdx
@@ -1,31 +1,23 @@
 ---
 title: Hello World
-description: My first blog, so why not make Hello World examples in all the languages that I have used to some capacity. C, C++, Java, Python, Typescript, Go, Rust and Bash
+description: Hello world examples in the languages I use (Go, Java, TS) and that I am learning for fun (Rust, Ocaml).
 pubDate: 2023-03-15
 updatedDate: 2023-03-16
+tags: [Go, Java, Typescript, Rust, OCaml, Coding]
 image: 
   src: "hello-world.jpg"
   alt: "hello world"
 ---
 
-# C
-```c
-#include <stdio.h>
+# Go
+```go
+package main
 
-int main() {
-   printf("Hello, world!");
-   return 0;
-}
-```
+import "fmt"
 
-# C++
-```cpp
-#include <iostream>
-
-int main() {
-    std::cout << "Hello, world!";
-    return 0;
-}
+func main() {
+    fmt.Println("Hello, world!");
+  }
 ```
 
 # Java
@@ -36,26 +28,12 @@ public class main {
     }
 }
 ```
-# Python
-```python
-print("Hello, world!")
-```
 
 # Typescript
 ```ts
 cosnole.log("Hello, world!");
 ```
 
-# Go
-```go
-package main
-
-import "fmt"
-
-func main() {
-    println("Hello, world!");
-  }
-```
 
 # Rust
 ```rs
@@ -64,7 +42,7 @@ fn main() {
 }
 ```
 
-# Bash
-```bash
-echo "Hello, world!"
+# OCaml
+```ml
+print_string "Hello world!\n"
 ```
