--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hello World
-description: Hello world examples in the languages I use (Go, Java, TS) and that I am learning for fun (Rust, Ocaml).
-publishDate: "13 May 2022"
+description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust, Ocaml).
+publishDate: "13 March 2023"
 tags: [Go, Java, Typescript, Rust, OCaml, Coding]
 ---
 
