--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,8 +1,8 @@
 ---
 title: Hello World
-description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust, Ocaml).
+description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust, Kotlin).
 publishDate: "13 March 2023"
-tags: [Go, Java, Typescript, Rust, OCaml, Coding]
+tags: [Go, Java, Typescript, Rust, Kotlin, Coding]
 ---
 
 # Go
@@ -12,7 +12,7 @@ package main
 import "fmt"
 
 func main() {
-    fmt.Println("Hello, world!");
+    fmt.Println("Hello, world!")
   }
 ```
 
@@ -27,18 +27,20 @@ public class main {
 
 # Typescript
 ```ts
-cosnole.log("Hello, world!");
+cosnole.log("Hello, world!")
 ```
 
 
 # Rust
 ```rs
 fn main() {
-	println!("Hello, World!");
+	println!("Hello, world!");
 }
 ```
 
-# OCaml
-```ml
-print_string "Hello world!\n"
+# kotlin
+```kt
+fun main() {
+  println("Hello, world!")
+}
 ```
