--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hello World
-description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust, Kotlin).
+description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust).
 publishDate: "13 March 2023"
 tags: [Go, Java, Typescript, Rust, Kotlin, Coding]
 ---
@@ -35,12 +35,5 @@ cosnole.log("Hello, world!")
 ```rs
 fn main() {
 	println!("Hello, world!");
-}
-```
-
-# kotlin
-```kotlin
-fun main() {
-  println("Hello, world!")
 }
 ```
