--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -2,7 +2,7 @@
 title: Hello World
 description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust).
 publishDate: "13 March 2023"
-tags: [Go, Java, Typescript, Rust, Kotlin, Coding]
+tags: [Go, Java, Typescript, Rust, Coding]
 ---
 
 # Go
