--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,8 +1,8 @@
 ---
 title: Hello World
-description: Hello world examples in the languages I use (Go, Java, TS) and that I am curious about (Rust).
+description: Hello world examples in the languages I use (Go, TS), keep in my toolbox (Java, Python) and that I am curious about (Rust).
 publishDate: "13 March 2023"
-tags: [Go, Java, Typescript, Rust, Coding]
+tags: [Go, Typescript, Java, Python, Rust, Coding]
 ---
 
 # Go
@@ -16,6 +16,11 @@ func main() {
   }
 ```
 
+# Typescript
+```ts
+cosnole.log("Hello, world!")
+```
+
 # Java
 ```java
 public class main {
@@ -25,9 +30,9 @@ public class main {
 }
 ```
 
-# Typescript
-```ts
-cosnole.log("Hello, world!")
+# Python
+```py
+print("Hello, world!")
 ```
 
 
