--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,11 +1,12 @@
 ---
 title: Hello World
-description: Hello world examples in the languages I use (Go, TS), keep in my toolbox (Java, Python) and that I am curious about (Rust).
+description: Hello world examples in the languages that I use, keep in my toolbox and that I am curious about.
 publishDate: "13 March 2023"
 tags: [Go, Typescript, Java, Python, Rust, Coding]
 ---
 
 # Go
+
 ```go
 package main
 
@@ -17,11 +18,13 @@ func main() {
 ```
 
 # Typescript
+
 ```ts
-cosnole.log("Hello, world!")
+cosnole.log("Hello, world!");
 ```
 
 # Java
+
 ```java
 public class main {
   	public static void main(String[] args) {
@@ -31,12 +34,13 @@ public class main {
 ```
 
 # Python
+
 ```py
 print("Hello, world!")
 ```
 
-
 # Rust
+
 ```rs
 fn main() {
 	println!("Hello, world!");
