--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -2,7 +2,7 @@
 title: Hello World
 description: Hello world examples in the languages that I use, keep in my toolbox and that I am curious about.
 publishDate: "13 March 2023"
-tags: [Go, Typescript, Java, Python, Rust, Coding]
+tags: [Go, Typescript, Java, Python, Rust, Kotlin, Coding]
 ---
 
 # Go
@@ -30,6 +30,14 @@ public class main {
   	public static void main(String[] args) {
       	System.out.println("Hello, world!");
     }
+}
+```
+
+# Kotlin
+
+```kotlin
+fun main() {
+    println("Hello, world!")
 }
 ```
 
