--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,8 +1,8 @@
 ---
 title: Hello World
-description: Hello world examples in the languages that I use, keep in my toolbox and that I am curious about.
+description: Hello world examples in the languages that I use and that I am curious about.
 publishDate: "13 March 2023"
-tags: [Go, Typescript, Java, Python, Rust, Kotlin, Coding]
+tags: [Go, Typescript, Python, Rust, Coding]
 ---
 
 # Go
@@ -21,24 +21,6 @@ func main() {
 
 ```ts
 cosnole.log("Hello, world!");
-```
-
-# Java
-
-```java
-public class main {
-  	public static void main(String[] args) {
-      	System.out.println("Hello, world!");
-    }
-}
-```
-
-# Kotlin
-
-```kotlin
-fun main() {
-    println("Hello, world!")
-}
 ```
 
 # Python
