--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -2,7 +2,7 @@
 title: Hello World
 description: Hello world examples in the languages that I use and that I am curious about.
 publishDate: "13 March 2023"
-tags: [Go, Typescript, Python, Rust, Coding]
+tags: [Go, Typescript, Python, Rust, C++, Coding]
 ---
 
 # Go
@@ -34,5 +34,16 @@ print("Hello, world!")
 ```rs
 fn main() {
 	println!("Hello, world!");
+}
+```
+
+# C++
+
+```cpp
+#include <iostream>
+
+int main() {
+    std::cout << "Hello World!";
+    return 0;
 }
 ```
