--- a/src/content/post/hello-world.mdx
+++ b/src/content/post/hello-world.mdx
@@ -1,8 +1,8 @@
 ---
 title: Hello World
-description: Hello world examples in the languages that I use and that I am curious about.
+description: Hello world examples in the languages that I use, familiar with and that I am curious about.
 publishDate: "13 March 2023"
-tags: [Go, Typescript, Python, Rust, C++, Coding]
+tags: [Go, Typescript, Python, Java, Rust, C++, Coding]
 ---
 
 # Go
@@ -29,6 +29,18 @@ cosnole.log("Hello, world!");
 print("Hello, world!")
 ```
 
+# Java
+
+```java
+public class Main {
+
+  public static void main(String[] args) {
+  	System.out.println("Hello, world!"); 
+  }
+  
+}
+```
+
 # Rust
 
 ```rs
@@ -43,7 +55,7 @@ fn main() {
 #include <iostream>
 
 int main() {
-    std::cout << "Hello World!";
+    std::cout << "Hello, world!";
     return 0;
 }
 ```
